fix(table): remove vertical scrollbar for pagination in RTL

--- a/packages/react/src/components/Table/_pagination.scss
+++ b/packages/react/src/components/Table/_pagination.scss
@@ -84,4 +84,9 @@ html[dir='rtl'] {
       }
     }
   }
+
+  // Hide vertical scrollbar in RTL
+  .#{$iot-prefix}--pagination {
+    overflow-y: hidden;
+  }
 }
